site: large-image social cards, SEO url fix, RSS autodiscovery, dark mode, heading anchors, code labels

--- a/_sass/_posts-pages.scss
+++ b/_sass/_posts-pages.scss
@@ -450,6 +450,91 @@ pre {
   color: $color-accent;
 }
 
+/* Code language label */
+.code-lang {
+  color: rgba(255, 255, 255, 0.4);
+  font-family: $font-primary;
+  font-size: 0.61111rem;
+  left: 12px;
+  letter-spacing: 1px;
+  position: absolute;
+  text-transform: uppercase;
+  top: 10px;
+}
+
+/* Heading anchor links */
+.post-content h2,
+.post-content h3 {
+  position: relative;
+}
+
+.heading-anchor {
+  color: $gray-light;
+  font-weight: normal;
+  left: -0.8em;
+  opacity: 0;
+  padding-right: 0.3em;
+  position: absolute;
+  text-decoration: none;
+  transition: opacity 0.15s, color 0.15s;
+}
+
+.post-content h2:hover .heading-anchor,
+.post-content h3:hover .heading-anchor,
+.heading-anchor:focus {
+  opacity: 1;
+}
+
+.heading-anchor:hover {
+  color: $color-accent;
+}
+
+.heading-anchor.copied:after {
+  content: " copied";
+  font-size: 0.6em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+/* Dark mode toggle button */
+.theme-toggle {
+  background: transparent;
+  border: 0;
+  color: $gray-dark;
+  height: 2.75em;
+  margin-right: 4px;
+  padding: 0;
+  vertical-align: middle;
+  width: 2.75em;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background: transparent;
+    box-shadow: none;
+    color: $color-accent;
+  }
+
+  .icon-moon,
+  .icon-sun {
+    vertical-align: middle;
+  }
+
+  .icon-sun {
+    display: none;
+  }
+}
+
+.dark-mode .theme-toggle {
+  .icon-moon {
+    display: none;
+  }
+
+  .icon-sun {
+    display: inline-block;
+  }
+}
+
 /* Related articles */
 .related-posts {
   border-top: 1px solid $gray-lighter;
